# bank-files

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  cargo-sources.yml  io.github.noobping.BankFiles.json  io.github.noobping.BankFiles.yml  meson.build  meson_options.txt
.github/: copilot-instructions.md
.github/workflows/: download-ai-assets.yml  sources.yml  win.yml
data/: bank-files-search-provider.ini  bank-files-search-provider.service  bank-files.wxs  io.github.noobping.BankFiles.desktop  io.github.noobping.BankFiles.gschema.xml  metainfo.xml  resources.xml
data/ai/: LICENSE  README.md  classifier.onnx  generator.safetensors  model.json  tokenizer.json
data/css/: style.css
data/defaults/: budgetcodes.csv  budgetcodes.de.csv  budgetcodes.nl.csv  cash_flow_direction_aliases.tsv  direction_aliases.tsv  editable_field_aliases.csv  editable_field_aliases.de.csv  editable_field_aliases.nl.csv  editable_rules.csv  editable_rules.de.csv  editable_rules.nl.csv  fallback_categories.de.tsv  fallback_categories.nl.tsv  fallback_categories.tsv  false_aliases.txt  field_aliases.csv  rule_field_aliases.tsv
data/example/: demo_transactions.csv  demo_transactions.de.csv  demo_transactions.en.csv  demo_transactions.nl.csv
data/ui/: action-dialog.ui  fake-transactions-dialog.ui  loading-placeholder.ui  main-window.ui  management-dialog.ui  operation-queue-dialog.ui  partial-load-notice.ui  rule-search-chips.ui  settings-dialog.ui  shortcuts-dialog.ui  status-bar.ui  status-history-dialog.ui  status-history-popover.ui
po/: POTFILES  de.po  meson.build  nl.po
src/: app_info.rs  i18n.rs  main.rs  resources.rs  rules.rs  search_provider.rs  util.rs
src/analytics/: budgets.rs  categories.rs  dashboard.rs  diagnostics.rs  hierarchy.rs  mod.rs  tests.rs  types.rs
src/analytics/categories/: annual.rs  cash_flow.rs  mod.rs  totals.rs
src/analytics/dashboard/: forecast.rs  mod.rs
src/analytics/diagnostics/: amounts.rs  counts.rs  grouping.rs  labels.rs  matching.rs  mod.rs  offsetting.rs  repeating.rs  transfers.rs
src/analytics/tests/: budget_usage.rs  cash_flow.rs  dashboard.rs  diagnostics.rs  mod.rs  yearly.rs
src/app/: action_dialog.rs  actions.rs  annual.rs  config_ops.rs  config_ops_tests.rs  config_rule_undo.rs  config_rule_undo_tests.rs  configuration_dialog.rs  core.rs  export.rs  fake_transactions.rs  field_alias.rs  filters.rs  form_autofill.rs  import.rs  metric_order.rs  mod.rs  money.rs  operation_queue.rs  overview.rs  planned_income.rs  popup.rs  preferences.rs  preferences_dialog.rs  refund_budget.rs  render.rs  rule_dialog.rs  rule_text.rs  settings_dialog.rs  shell.rs  shortcuts.rs  smart.rs  status.rs  text.rs  transfer_budget.rs  warning_cards.rs  warnings.rs  year.rs
src/app/actions/: data.rs  dialogs.rs  helpers.rs  local_setup.rs  mod.rs  navigation.rs  page.rs
src/app/annual/: budgets.rs  categories.rs  mod.rs
src/app/budget/: add.rs  edit.rs  empty.rs  forms.rs  generate.rs  mod.rs  page.rs  period.rs  special.rs
src/app/configuration_dialog/: groups.rs  mod.rs  snapshot.rs  tasks.rs  tests.rs
src/app/core/: availability.rs  build.rs  i18n.rs  loading.rs  mod.rs  navigation.rs  preference_sync.rs  scope.rs  session.rs  startup.rs  types.rs
src/app/diagnostics/: mapping.rs  mod.rs  page.rs  widgets.rs
src/app/fake_transactions/: controller.rs  form.rs  list.rs  mod.rs  model.rs  presentation.rs  tests.rs  transaction_builder.rs  widgets.rs
src/app/filters/: mod.rs  page.rs  presets.rs  search.rs  tests.rs
src/app/form_autofill/: connect.rs  entries.rs  inference.rs  mod.rs  values.rs
src/app/import/: drop_target.rs  mod.rs  open.rs  preferences.rs  reload.rs  sources.rs  status.rs
src/app/management/: dialogs.rs  mod.rs
src/app/operation_queue/: action_registry.rs  apply.rs  controller.rs  detail_tests.rs  details.rs  messages.rs  mod.rs  model.rs  presentation.rs  rows.rs  tests.rs  widgets.rs
src/app/overview/: forecast.rs  mod.rs  search.rs  sections.rs  tests.rs
src/app/popup/: mod.rs  search.rs  shell.rs
src/app/preferences/: keys.rs  tests.rs
src/app/preferences_dialog/: group.rs  mod.rs  remember.rs  snapshot.rs  spec.rs  tests.rs
src/app/print/: diagnostics.rs  helpers.rs  import_reports.rs  mod.rs  operation.rs  operation_tests.rs  reports.rs  types.rs
src/app/status/: bar.rs  feedback.rs  history.rs  history_rows.rs  lifecycle.rs  mod.rs  page_actions.rs  snapshot.rs  tests.rs
src/app/transactions/: common.rs  mod.rs  page.rs
src/app/warnings/: annual.rs  evaluator.rs  message.rs  mod.rs  monthly.rs  tests.rs
src/csv_detect/: aliases.rs  fields.rs  import.rs  keys.rs  mod.rs  records.rs  tests.rs
src/csv_detect/import/: csv_io.rs  mod.rs  parallel.rs  plan.rs  scope.rs
src/data/: budget_code.rs  config.rs  copy.rs  defaults.rs  export.rs  generate.rs  maintenance.rs  mod.rs  spreadsheet.rs  storage.rs  tests.rs  validation.rs
src/data/config/: backup.rs  budgets_aliases.rs  files.rs  ignored_patterns.rs  mod.rs  rule_search.rs  rule_terms.rs  rules.rs
src/data/editable/: aliases.rs  budgets.rs  mod.rs  rules.rs
src/data/generate/: aliases.rs  budget_code.rs  mod.rs  patterns.rs  period.rs  rule_fields.rs  rules.rs  smart_insights_disabled_tests.rs  tests.rs
src/data/storage/: cache.rs  capabilities.rs  load.rs  mod.rs  period.rs  reload.rs  types.rs
src/local_ai/: availability.rs  categories.rs  configuration.rs  input.rs  mod.rs  runtime.rs  status.rs  tests.rs
src/model/: app.rs  budget.rs  dedupe.rs  import.rs  mod.rs  special_budget.rs  time.rs  transaction.rs
src/rules/: apply.rs  defaults.rs  fallback.rs  load.rs  mod.rs  model.rs  tests.rs  text.rs
src/search_provider/: data.rs  index.rs  launch.rs  mod.rs  service.rs  tests.rs
src/setup/: local.rs  mod.rs  paths.rs  tests.rs
src/summary/: categories.rs  diagnostics.rs  mod.rs  overview.rs  tables.rs
src/ui/: basic.rs  builder.rs  builder_tests.rs  buttons.rs  cards.rs  dialogs.rs  forms.rs  mod.rs  progress.rs  search.rs  style.rs
src/updater/: disabled.rs  logic.rs  mod.rs
(+166 files in other folders)
