[package]
name = "bank-files"
version = "0.1.2"
edition = "2021"
authors = ["Nick"]
license = "MIT"
description = "Preview money decisions"
homepage = "https://github.com/noobping/bank-files"
repository = "https://github.com/noobping/bank-files"

[features]
default = []
flatpak = []
setup = ["dep:reqwest", "dep:semver"]

[dependencies]
anyhow = "1"
adw = { package = "libadwaita", version = "0.9", features = ["v1_8", "gtk_v4_6"] }
calamine = "0.35.0"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
dirs-next = "2.0.0"
encoding_rs = "0.8"
hex = "0.4"
indexmap = "2"
once_cell = "1"
regex = "1"
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "async-std", "common-controls-v6"] }
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
unicode-normalization = "0.1"
walkdir = "2"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
reqwest = { version = "0.12", optional = true, default-features = false, features = ["blocking", "json", "rustls-tls"] }
semver = { version = "1", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
semver = "1"

[build-dependencies]
glib-build-tools = "0.22"

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1.31"

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
