option(
  'cargo_variant',
  type: 'combo',
  choices: ['developer', 'release', 'translation'],
  value: 'developer',
  description: 'Cargo-backed Meson wrapper profile. The translation profile intentionally reuses cargo build --release.',
)

option(
  'cargo_features',
  type: 'string',
  value: '',
  description: 'Space- or comma-separated Cargo features to pass through the Meson wrapper.',
)

option(
  'setup',
  type: 'boolean',
  value: false,
  description: 'Enable Linux setup helpers and the standalone updater.',
)
